--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: lbarreteau/hello-world-javascript-action@
+        uses: lbarreteau/hello-world-javascript-action@v1.1
         with:
           who-to-greet: 'Luchooo'
       # Use the output from the `hello` step
